--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>Dicey Business</title>
 </head>
 <body>
-    <input type="button" value="Generate Die">
+    <input id="die-btn" type="button" value="Generate Die">
+    <input id="roll-die-btn" type="button" value="Roll Dice">
+    <input id="sum-die-btn" type="button" value="Sum Dice">
+    <div id="dice-container"></div>
     <script src="app.js"></script>
 </body>
 </html>
